Updated certs/courses and css

--- a/index.html
+++ b/index.html
@@ -71,14 +71,6 @@
         <hr />
 
         <!-- <aside>
-          <h3>Paternity Leave</h3>
-          <p class="family-medical-leave">Family and Medical Leave</p>
-          <p><b>INSERT START DATE</b> - <b>INSERT END DATE</b></p>
-
-          <p>I took a 12-week parental leave to aid my partner in her postpartum period and bond with our newborn baby.</p>
-        </aside> -->
-
-        <!-- <aside>
           <h3>Senior Software Engineer</h3>
           <p class="COMPANY-NAME">COMPANY NAME</p>
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
@@ -94,11 +86,19 @@
         </aside> -->
 
         <!-- <aside>
+          <h3>Paternity Leave</h3>
+          <p class="family-medical-leave">Family and Medical Leave</p>
+          <p><b>INSERT START DATE</b> - <b>INSERT END DATE</b></p>
+
+          <p>I took a 12-week parental leave to aid my partner in her postpartum period and bond with our newborn baby.</p>
+        </aside> -->
+
+        <!-- <aside>
           <h3>Founder & Owner</h3>
-          <p class="COMPANY-NAME">COMPANY NAME</p>
+          <p class="for-future-you">For Future You, LLC</p>
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
 
-          <a href="#" target="_blank" class="external-link">WEBSITE</a>
+          <a href="http://forfutureyou.com/" target="_blank" class="external-link">Website</a>
         </aside> -->
 
         <aside>
@@ -294,30 +294,74 @@
       <br />
 
       <section>
-        <hr id="certifications" />
-        <h2><a href="#certifications">Certifications</a></h2>
+        <hr id="certifications-and-courses" />
+        <h2><a href="#certifications-and-courses">Certifications & Courses</a></h2>
         <hr />
 
         <!-- <p>
-          <b class="certification-title">Lockheed Martin: Lead Software Engineer Development Qualification Program</b>
+          <b class="certification-and-course-title">Lockheed Martin: Lead Software Engineer Development Qualification Program</b>
           <br />
           This program seeks to identify people across the organization (Rotary and Mission Systems) that are qualified and on track to
           practice as technical leaders on proposals and programs, providing incentive for technical professionals to grow their skills and
           expertise in leading technical teams.
           <br />
-          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
+          <em class="certification-and-course-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
         </p> -->
 
         <!-- <p>
-          <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
+          <b class="certification-and-course-title">Lockheed Martin: Lead 4 Success</b>
           <br />
           A series of training seminars (16 total hours) for up-and-coming lead engineers at Lockheed Martin.
           <br />
-          <em class="certification-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
+          <em class="certification-and-course-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-and-course-title">Wolfram U - Wolfram Notebooks: Building and Sharing Technical Workflows</b>
+          <br />
+          This course shows how you can combine the Wolfram Language with the notebook interface to express your ideas and develop technical
+          workflows for data science, modeling, research, education and more.
+          <br />
+          <em class="certification-and-course-date">March 2023 - Forever</em>
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-and-course-title"
+            >Wolfram U - Deploying Computational Web Services: Getting Started with APIs, Dynamic Content and Web Apps</b
+          >
+          <br />
+          Discover how simple it is to create powerful tools and make them available throughout your company or to the wider public using
+          APIs, cloud notebooks, forms and dynamic web content.
+          <br />
+          <em class="certification-and-course-date">March 2023 - Forever</em>
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-and-course-title">Wolfram U - Wolfram Language Programming Fundamentals</b>
+          <br />
+          This instructor-led session teaches the fundamental concepts of programming in Wolfram Language.
+          <br />
+          <em class="certification-and-course-date">March 2023 - Forever</em>
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-and-course-title">Wolfram U - Quick Start to Wolfram Tech</b>
+          <br />
+          This instructor-led session introduces core technologies for getting started quickly with the Wolfram Technology stack.
+          <br />
+          <em class="certification-and-course-date">March 2023 - Forever</em>
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-and-course-title">Wolfram U - Introduction to Machine Learning in Wolfram Language</b>
+          <br />
+          This course introduces the easy-to-use machine learning superfunctions available in Wolfram Language.
+          <br />
+          <em class="certification-and-course-date">February 2023 - Forever</em>
         </p> -->
 
         <p>
-          <b class="certification-title">LinkedIn Learning: Become a Thought Leader</b>
+          <b class="certification-and-course-title">LinkedIn Learning: Become a Thought Leader</b>
           <br />
           <q cite="https://www.linkedin.com/learning/paths/become-a-thought-leader"
             >Thought leaders stand out from the rest in their field—they create their own advantage to advance faster in their careers,
@@ -325,34 +369,34 @@
             are and share it more widely and effectively to be known as an expert in your industry.</q
           >
           <br />
-          <em class="certification-date">August 2022 - Forever</em>
+          <em class="certification-and-course-date">August 2022 - Forever</em>
         </p>
 
         <p>
-          <b class="certification-title">LinkedIn Learning: Master the OWASP Top 10</b>
+          <b class="certification-and-course-title">LinkedIn Learning: Master the OWASP Top 10</b>
           <br />
           LinkedIn Learning course for mastering the OWASP Top 10, which An online course offered by LinkedIn Learning to achieve
           proficiency in the OWASP Top 10, a widely accepted guide for web application security in the developer world.
           <br />
-          <em class="certification-date">August 2022 - Forever</em>
+          <em class="certification-and-course-date">August 2022 - Forever</em>
         </p>
 
         <p>
-          <b class="certification-title">DevOps Engineering on AWS</b>
+          <b class="certification-and-course-title">DevOps Engineering on AWS</b>
           <br />
           Accredited through ExitCertified, this certification enhances and verifies my knowledge of developer operations for engineering on
           Amazon Web Services (AWS). Over a 3-day (24 total hours) training session, I learned about AWS cloud computing services and then
           passed the examination for using the skills learned.
           <br />
-          <em class="certification-date">June 2021 - Forever</em>
+          <em class="certification-and-course-date">June 2021 - Forever</em>
         </p>
 
         <p>
-          <b class="certification-title">United States Security Clearance - Secret</b>
+          <b class="certification-and-course-title">United States Security Clearance - Secret</b>
           <br />
           Granted by the United States Department of Defense (DOD) and Defense Counterintelligence and Security Agency (DCSA).
           <br />
-          <em class="certification-date">July 2020 - <b>Present</b></em>
+          <em class="certification-and-course-date">July 2020 - <b>Present</b></em>
         </p>
       </section>
 
