Removed future date for courses; only applicable to certifications

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           This course shows how you can combine the Wolfram Language with the notebook interface to express your ideas and develop technical
           workflows for data science, modeling, research, education and more.
           <br />
-          <em class="certification-and-course-date">March 2023 - Forever</em>
+          <em class="certification-and-course-date">March 2023</em>
         </p>
 
         <p>
@@ -333,7 +333,7 @@
           Discover how simple it is to create powerful tools and make them available throughout your company or to the wider public using
           APIs, cloud notebooks, forms and dynamic web content.
           <br />
-          <em class="certification-and-course-date">March 2023 - Forever</em>
+          <em class="certification-and-course-date">March 2023</em>
         </p>
 
         <p>
@@ -341,7 +341,7 @@
           <br />
           This instructor-led session teaches the fundamental concepts of programming in Wolfram Language.
           <br />
-          <em class="certification-and-course-date">March 2023 - Forever</em>
+          <em class="certification-and-course-date">March 2023</em>
         </p>
 
         <p>
@@ -349,7 +349,7 @@
           <br />
           This instructor-led session introduces core technologies for getting started quickly with the Wolfram Technology stack.
           <br />
-          <em class="certification-and-course-date">March 2023 - Forever</em>
+          <em class="certification-and-course-date">March 2023</em>
         </p>
 
         <p>
@@ -357,7 +357,7 @@
           <br />
           This course introduces the easy-to-use machine learning superfunctions available in Wolfram Language.
           <br />
-          <em class="certification-and-course-date">February 2023 - Forever</em>
+          <em class="certification-and-course-date">February 2023</em>
         </p>
 
         <p>
