Updated with talkiatry and FFY experience sections uncommented; removed need for external-link CSS class

--- a/charlotte-bilger/index.html
+++ b/charlotte-bilger/index.html
@@ -28,7 +28,7 @@
 
         <p>
           This is a temporary landing page for the
-          <a href="https://charlottebilger.com/" target="_blank" class="external-link">charlottebilger.com</a>
+          <a href="https://charlottebilger.com/" target="_blank">charlottebilger.com</a>
           domain. For now, you can safely ignore this page and carry on with your day.
         </p>
       </section>
