--- a/victoria-bilger/index.html
+++ b/victoria-bilger/index.html
@@ -28,7 +28,7 @@
 
         <p>
           This is a temporary landing page for the
-          <a href="https://victoriabilger.com/" target="_blank" class="external-link">victoriabilger.com</a>
+          <a href="https://victoriabilger.com/" target="_blank">victoriabilger.com</a>
           domain. For now, you can safely ignore this page and carry on with your day.
         </p>
       </section>
