--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <nav>
           <ul>
             <li>
-              <a href="https://github.com/ChristopherBilg" target="_blank" class="external-link">GitHub</a>
+              <a href="https://github.com/ChristopherBilg" target="_blank">GitHub</a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank" class="external-link">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn</a>
             </li>
             <li>
-              <a href="./Christopher-Bilger-Resume-March-2023.pdf" target="_blank" class="external-link">Resume</a>
+              <a href="./Christopher-Bilger-Resume-March-2023.pdf" target="_blank">Resume</a>
             </li>
             <li>
-              <a href="mailto:christopherbilg@gmail.com" target="_blank" class="external-link">Email</a>
+              <a href="mailto:christopherbilg@gmail.com" target="_blank">Email</a>
             </li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/gpg-keys">GPG Keys</a></li>
@@ -50,9 +50,9 @@
         <hr />
 
         <p>
-          Welcome to my portfolio website. I am Chris Bilger, a software engineer with a multifaceted background including engineering,
-          education, and leadership. I am currently employed at Lockheed Martin, where I bring my expertise in full-stack application
-          development to the design, build, testing, and deployment of enterprise solutions.
+          Welcome to my portfolio website. I am Chris Bilger, a senior software engineer with a multifaceted background including
+          engineering, education, and leadership. I am currently employed at Lockheed Martin, where I bring my expertise in full-stack
+          application development to the design, build, testing, and deployment of enterprise solutions.
         </p>
 
         <p>
@@ -70,41 +70,33 @@
         <h2><a href="#professional-experience">Professional Experience</a></h2>
         <hr />
 
-        <!-- <aside>
+        <aside>
+          <h3>Founder & Owner</h3>
+          <p class="for-future-you">For Future You, LLC</p>
+          <p>May 2023 - <b>Present</b></p>
+
+          <a href="http://forfutureyou.com/" target="_blank">Product Website</a>
+          <p>Currently researching product-market fit while building out the minimum viable product (MVP).</p>
+        </aside>
+
+        <aside>
           <h3>Senior Software Engineer</h3>
-          <p class="COMPANY-NAME">COMPANY NAME</p>
-          <p><b>INSERT START DATE</b> - <b>Present</b></p>
-          <code>ADDITIONAL INFO</code>
+          <p class="talkiatry">Talkiatry, LLC</p>
+          <p>April 2023 - <b>Present</b></p>
 
           <details>
             <summary>A number of my memorable successes are:</summary>
 
             <ol>
-              <li>...</li>
+              <li>Too soon for any yet. Come back later for more information.</li>
             </ol>
           </details>
-        </aside> -->
-
-        <!-- <aside>
-          <h3>Paternity Leave</h3>
-          <p class="family-medical-leave">Family and Medical Leave</p>
-          <p><b>INSERT START DATE</b> - <b>INSERT END DATE</b></p>
-
-          <p>I took a 12-week parental leave to aid my partner in her postpartum period and bond with our newborn baby.</p>
-        </aside> -->
-
-        <!-- <aside>
-          <h3>Founder & Owner</h3>
-          <p class="for-future-you">For Future You, LLC</p>
-          <p><b>INSERT START DATE</b> - <b>Present</b></p>
-
-          <a href="http://forfutureyou.com/" target="_blank" class="external-link">Website</a>
-        </aside> -->
+        </aside>
 
         <aside>
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>May 2022 - <b>Present</b></p>
+          <p>May 2022 - March 2023</p>
           <code>Internal Position: <b>Member of Engineering Staff (L2)</b></code>
 
           <details>
@@ -221,7 +213,7 @@
 
         <aside>
           <h3>Academic Research: M.C.S.</h3>
-          <a href="https://github.com/ChristopherBilg/research-papers" target="_blank" class="external-link">Research Papers</a>
+          <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers</a>
           <p>August 2020 - August 2022</p>
           <p>The above hyperlink is a repository containing all of my research papers.</p>
         </aside>
@@ -230,9 +222,9 @@
           <h3>Developer (Interpreters, VMs, & Compilers)</h3>
           <p>
             crisp |
-            <a href="https://github.com/ChristopherBilg/crisp" target="_blank" class="external-link">GitHub</a>
+            <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub</a>
             |
-            <a href="https://chrisbilger.com/crisp/" target="_blank" class="external-link">Website</a>
+            <a href="https://chrisbilger.com/crisp/" target="_blank">Website</a>
           </p>
           <p>May 2022 - June 2022</p>
           <p>
@@ -245,9 +237,9 @@
           <h3>Developer & Security Researcher</h3>
           <p>
             ri2p |
-            <a href="https://github.com/ChristopherBilg/ri2p" target="_blank" class="external-link">GitHub</a>
+            <a href="https://github.com/ChristopherBilg/ri2p" target="_blank">GitHub</a>
             |
-            <a href="https://chrisbilger.com/ri2p/" target="_blank" class="external-link">Website</a>
+            <a href="https://chrisbilger.com/ri2p/" target="_blank">Website</a>
           </p>
           <p>January 2022 - May 2022</p>
           <p>
@@ -297,24 +289,6 @@
         <hr id="certifications-and-courses" />
         <h2><a href="#certifications-and-courses">Certifications & Courses</a></h2>
         <hr />
-
-        <!-- <p>
-          <b class="certification-and-course-title">Lockheed Martin: Lead Software Engineer Development Qualification Program</b>
-          <br />
-          This program seeks to identify people across the organization (Rotary and Mission Systems) that are qualified and on track to
-          practice as technical leaders on proposals and programs, providing incentive for technical professionals to grow their skills and
-          expertise in leading technical teams.
-          <br />
-          <em class="certification-and-course-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
-        </p> -->
-
-        <!-- <p>
-          <b class="certification-and-course-title">Lockheed Martin: Lead 4 Success</b>
-          <br />
-          A series of training seminars (16 total hours) for up-and-coming lead engineers at Lockheed Martin.
-          <br />
-          <em class="certification-and-course-date"><b>INSERT DATE OBTAINED</b> - Forever</em>
-        </p> -->
 
         <p>
           <b class="certification-and-course-title">Wolfram U - Wolfram Notebooks: Building and Sharing Technical Workflows</b>
