--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <h2><a href="#professional-experience">Professional Experience</a></h2>
         <hr />
 
-        <aside>
+        <!-- <aside>
           <h3>Founder & Owner</h3>
           <p class="for-future-you">For Future You, LLC</p>
           <p>May 2023 - <b>Present</b></p>
 
           <a href="http://forfutureyou.com/" target="_blank">Product Website</a>
           <p>Currently researching product-market fit while building out the minimum viable product (MVP).</p>
-        </aside>
+        </aside> -->
 
         <aside>
           <h3>Senior Software Engineer</h3>
